syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mayitbe.proto_api.service";
option java_outer_classname = "RpcServiceProto";

//服务请求实体
message HelloRequest {
    string greeting = 1;
    repeated bytes data = 2;
    string serial_type = 3;
}
//服务返回值实体
message HelloResponse {
    string reply = 1;
    repeated bytes data = 2;
    string serial_type = 3;
}

//定义服务
service HelloService {
    //定义服务方法, 动态生成的java方法会自动改成驼峰命名方式
    rpc SayHello(HelloRequest) returns (HelloResponse);
}